Add support for match generation among two teams

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+	<!-- Add navigation link to the matches page -->
+    <div style="text-align: right; margin: 10px;">
+        <a href="matches.html" style="font-size: 16px; color: #007BFF; text-decoration: none;">Go to Match Generator</a>
+    </div>
 
 	<div id="app-container">
 		<h2><em>Infinity</em> <span>Sorter</span></h2>
