remove csv matches download temprarily

--- a/matches.html
+++ b/matches.html
@@ -44,7 +44,7 @@
         <div id="match-container"></div>
         <div id="match-table-container"></div>
         <hr />
-        <a id="download-matches-button" href='#' onclick='downloadMatchesCSV({ filename: "matchesData.csv" });'>Download Matches CSV</a>
+        <!-- Removed the download matches CSV link -->
     </div>
 
     <script type="text/javascript" src="js/matches.js"></script>
